# fscanner

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  scanfile.cpp  scanfile.h  scanner.cpp  scanner.h  scanner.pro
test/big_weigth/: file:⁄⁄⁄media⁄xpech⁄LENOVO⁄
test/hand/: Type1-6  Type4
